docs/0.17/_sources/api/gammapy.datasets.MapDatasetOnOff.rst.txt
MapDatasetOnOff
===============

.. currentmodule:: gammapy.datasets

.. autoclass:: MapDatasetOnOff
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~MapDatasetOnOff.alpha
      ~MapDatasetOnOff.background
      ~MapDatasetOnOff.data_shape
      ~MapDatasetOnOff.evaluators
      ~MapDatasetOnOff.excess
      ~MapDatasetOnOff.mask
      ~MapDatasetOnOff.models
      ~MapDatasetOnOff.name
      ~MapDatasetOnOff.stat_type
      ~MapDatasetOnOff.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~MapDatasetOnOff.copy
      ~MapDatasetOnOff.create
      ~MapDatasetOnOff.cutout
      ~MapDatasetOnOff.fake
      ~MapDatasetOnOff.from_dict
      ~MapDatasetOnOff.from_geoms
      ~MapDatasetOnOff.from_hdulist
      ~MapDatasetOnOff.from_map_dataset
      ~MapDatasetOnOff.npred
      ~MapDatasetOnOff.plot_residuals
      ~MapDatasetOnOff.read
      ~MapDatasetOnOff.residuals
      ~MapDatasetOnOff.stack
      ~MapDatasetOnOff.stat_array
      ~MapDatasetOnOff.stat_sum
      ~MapDatasetOnOff.to_dict
      ~MapDatasetOnOff.to_hdulist
      ~MapDatasetOnOff.to_image
      ~MapDatasetOnOff.to_spectrum_dataset
      ~MapDatasetOnOff.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: alpha
   .. autoattribute:: background
   .. autoattribute:: data_shape
   .. autoattribute:: evaluators
   .. autoattribute:: excess
   .. autoattribute:: mask
   .. autoattribute:: models
   .. autoattribute:: name
   .. autoattribute:: stat_type
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: create
   .. automethod:: cutout
   .. automethod:: fake
   .. automethod:: from_dict
   .. automethod:: from_geoms
   .. automethod:: from_hdulist
   .. automethod:: from_map_dataset
   .. automethod:: npred
   .. automethod:: plot_residuals
   .. automethod:: read
   .. automethod:: residuals
   .. automethod:: stack
   .. automethod:: stat_array
   .. automethod:: stat_sum
   .. automethod:: to_dict
   .. automethod:: to_hdulist
   .. automethod:: to_image
   .. automethod:: to_spectrum_dataset
   .. automethod:: write
