docs/0.18.1/_sources/api/gammapy.datasets.MapDatasetOnOff.rst.txt
MapDatasetOnOff
===============

.. currentmodule:: gammapy.datasets

.. autoclass:: MapDatasetOnOff
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~MapDatasetOnOff.alpha
      ~MapDatasetOnOff.background
      ~MapDatasetOnOff.background_model
      ~MapDatasetOnOff.counts
      ~MapDatasetOnOff.data_shape
      ~MapDatasetOnOff.edisp
      ~MapDatasetOnOff.evaluators
      ~MapDatasetOnOff.excess
      ~MapDatasetOnOff.exposure
      ~MapDatasetOnOff.geoms
      ~MapDatasetOnOff.mask
      ~MapDatasetOnOff.mask_fit
      ~MapDatasetOnOff.mask_safe
      ~MapDatasetOnOff.mask_safe_edisp
      ~MapDatasetOnOff.mask_safe_image
      ~MapDatasetOnOff.mask_safe_psf
      ~MapDatasetOnOff.models
      ~MapDatasetOnOff.name
      ~MapDatasetOnOff.psf
      ~MapDatasetOnOff.stat_type
      ~MapDatasetOnOff.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~MapDatasetOnOff.apply_mask_safe
      ~MapDatasetOnOff.copy
      ~MapDatasetOnOff.create
      ~MapDatasetOnOff.cutout
      ~MapDatasetOnOff.downsample
      ~MapDatasetOnOff.fake
      ~MapDatasetOnOff.from_dict
      ~MapDatasetOnOff.from_geoms
      ~MapDatasetOnOff.from_hdulist
      ~MapDatasetOnOff.from_map_dataset
      ~MapDatasetOnOff.info_dict
      ~MapDatasetOnOff.npred
      ~MapDatasetOnOff.npred_background
      ~MapDatasetOnOff.npred_off
      ~MapDatasetOnOff.npred_signal
      ~MapDatasetOnOff.pad
      ~MapDatasetOnOff.plot_residuals
      ~MapDatasetOnOff.plot_residuals_spatial
      ~MapDatasetOnOff.plot_residuals_spectral
      ~MapDatasetOnOff.read
      ~MapDatasetOnOff.resample_energy_axis
      ~MapDatasetOnOff.reset_data_cache
      ~MapDatasetOnOff.residuals
      ~MapDatasetOnOff.slice_by_energy
      ~MapDatasetOnOff.slice_by_idx
      ~MapDatasetOnOff.stack
      ~MapDatasetOnOff.stat_array
      ~MapDatasetOnOff.stat_sum
      ~MapDatasetOnOff.to_dict
      ~MapDatasetOnOff.to_hdulist
      ~MapDatasetOnOff.to_image
      ~MapDatasetOnOff.to_map_dataset
      ~MapDatasetOnOff.to_spectrum_dataset
      ~MapDatasetOnOff.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: alpha
   .. autoattribute:: background
   .. autoattribute:: background_model
   .. autoattribute:: counts
   .. autoattribute:: data_shape
   .. autoattribute:: edisp
   .. autoattribute:: evaluators
   .. autoattribute:: excess
   .. autoattribute:: exposure
   .. autoattribute:: geoms
   .. autoattribute:: mask
   .. autoattribute:: mask_fit
   .. autoattribute:: mask_safe
   .. autoattribute:: mask_safe_edisp
   .. autoattribute:: mask_safe_image
   .. autoattribute:: mask_safe_psf
   .. autoattribute:: models
   .. autoattribute:: name
   .. autoattribute:: psf
   .. autoattribute:: stat_type
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: apply_mask_safe
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: cutout
   .. automethod:: downsample
   .. automethod:: fake
   .. automethod:: from_dict
   .. automethod:: from_geoms
   .. automethod:: from_hdulist
   .. automethod:: from_map_dataset
   .. automethod:: info_dict
   .. automethod:: npred
   .. automethod:: npred_background
   .. automethod:: npred_off
   .. automethod:: npred_signal
   .. automethod:: pad
   .. automethod:: plot_residuals
   .. automethod:: plot_residuals_spatial
   .. automethod:: plot_residuals_spectral
   .. automethod:: read
   .. automethod:: resample_energy_axis
   .. automethod:: reset_data_cache
   .. automethod:: residuals
   .. automethod:: slice_by_energy
   .. automethod:: slice_by_idx
   .. automethod:: stack
   .. automethod:: stat_array
   .. automethod:: stat_sum
   .. automethod:: to_dict
   .. automethod:: to_hdulist
   .. automethod:: to_image
   .. automethod:: to_map_dataset
   .. automethod:: to_spectrum_dataset
   .. automethod:: write
